Enable ghc compiler optimizations
We use -O2 to enable all "safe" optimizations. Compilation time isn't
really an issue given the size of the program.

--- a/hs-rpal.cabal
+++ b/hs-rpal.cabal
@@ -11,4 +11,4 @@ Cabal-Version:      >=1.2
 Executable hs-rpal
     Main-Is:        hsRpal.hs
     Build-Depends:  base >= 4.0 && < 5.0, regex-tdfa >= 1.0
-    Ghc-Options:    -Wall
+    Ghc-Options:    -Wall -O2
