--- a/hs-rpal.cabal
+++ b/hs-rpal.cabal
@@ -1,14 +1,27 @@
-Name:               hs-rpal
-Version:            0.0.1
-Description:        An RPAL interpreter written in Haskell
-License:            GPL
-License-File:       LICENSE
-Author:             Benjamin Woodruff
-Maintainer:         benjaminwoodruff@ufl.edu
-Build-Type:         Simple
-Cabal-Version:      >=1.2 
+name:               hs-rpal
+version:            0.0.1
+description:        An RPAL interpreter written in Haskell
+homepage:           https://github.com/pipeep/hs-rpal
+bug-reports:        https://github.com/PiPeep/hs-rpal/issues
+license:            GPL-3
+license-file:       LICENSE
+author:             Benjamin Woodruff
+maintainer:         benjaminwoodruff@ufl.edu
+build-type:         Simple
+cabal-version:      >=1.2 
 
-Executable hs-rpal
-    Main-Is:        hsRpal.hs
-    Build-Depends:  base >= 4.0 && < 5.0, regex-tdfa >= 1.0
-    Ghc-Options:    -Wall -O2
+-- This is what I like to use
+executable hs-rpal
+    main-is:        hsRpal.hs
+    hs-source-dirs: src
+    build-depends:  base >= 4.0 && < 5.0, regex-tdfa >= 1.0
+    ghc-options:    -Wall -O2
+
+-- This is what should be turned in for COP5555. Instead of using gnu-style
+-- --double-dash command line arguments, it uses -single-dash ones. It is also
+-- statically linked to work on the CISE machines.
+executable hs-rpal-compat
+    main-is:        hsRpal.hs
+    hs-source-dirs: src
+    build-depends:  base >= 4.0 && < 5.0, regex-tdfa >= 1.0
+    ghc-options:    -Wall -O2 -static
