--- a/hs-rpal.cabal
+++ b/hs-rpal.cabal
@@ -21,7 +21,7 @@ executable hs-rpal
 -- --double-dash command line arguments, it uses -single-dash ones. It is also
 -- statically linked to work on the CISE machines.
 executable hs-rpal-compat
-    main-is:        hsRpal.hs
+    main-is:        hsRpalCompat.hs
     hs-source-dirs: src
     build-depends:  base >= 4.0 && < 5.0, regex-tdfa >= 1.0
     ghc-options:    -Wall -O2 -static
