Prepare for COP5555 Project 1 submission
- Add a `BUGS` file (that says that there are no known bugs)
- Make the Makefile match the given example Makefile
- Update version number to 0.1.0 (0.0.2 feels too small)
- Make both build targets static (why not?)

--- a/hs-rpal.cabal
+++ b/hs-rpal.cabal
@@ -1,5 +1,5 @@
 name:               hs-rpal
-version:            0.0.2
+version:            0.1.0
 description:        An RPAL interpreter written in Haskell
 homepage:           https://github.com/pipeep/hs-rpal
 bug-reports:        https://github.com/PiPeep/hs-rpal/issues
@@ -15,7 +15,7 @@ executable hs-rpal
     main-is:        hsRpal.hs
     hs-source-dirs: src
     build-depends:  base >= 4.0 && < 5.0, regex-tdfa >= 1.0
-    ghc-options:    -Wall -O2
+    ghc-options:    -Wall -O2 -static
 
 -- This is what should be turned in for COP5555. Instead of using gnu-style
 -- --double-dash command line arguments, it uses -single-dash ones. It is also
