Project 2, as turned in for credit (broken)
- Bugfixes with full standardizer
- Control Structure generation (works!)
- Partial implementation of execution environment
- Hardly tested implementation of the CSE machine

--- a/hs-rpal.cabal
+++ b/hs-rpal.cabal
@@ -1,5 +1,5 @@
 name:               hs-rpal
-version:            0.1.0
+version:            0.3.0
 description:        An RPAL interpreter written in Haskell
 homepage:           https://github.com/pipeep/hs-rpal
 bug-reports:        https://github.com/PiPeep/hs-rpal/issues
@@ -14,7 +14,7 @@ cabal-version:      >=1.2
 executable hs-rpal
     main-is:        hsRpal.hs
     hs-source-dirs: src
-    build-depends:  base >= 4.0 && < 5.0, regex-tdfa >= 1.0
+    build-depends:  base >= 4.0 && < 5.0, regex-tdfa >= 1.0, text >= 0.11
     ghc-options:    -Wall -O2 -static
 
 -- This is what should be turned in for COP5555. Instead of using gnu-style
@@ -23,5 +23,5 @@ executable hs-rpal
 executable hs-rpal-compat
     main-is:        hsRpalCompat.hs
     hs-source-dirs: src
-    build-depends:  base >= 4.0 && < 5.0, regex-tdfa >= 1.0
+    build-depends:  base >= 4.0 && < 5.0, regex-tdfa >= 1.0, text >= 0.11
     ghc-options:    -Wall -O2 -static
